--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Orienta&display=swap');
 
 * {
   margin: 0px;
@@ -10,7 +11,7 @@
 }
 
 body {
-  background-color: #00008b;
+  background-color: #EFB5EB;
 }
 
 input:focus-within ~ label {
